@@ -4,7 +4,10 @@ Licensed under the GNU General Public License.
 
 See the file COPYING for details.
 -->
-<elementSpec xmlns="http://www.tei-c.org/ns/1.0" module="core" xml:id="TEI2" usage="req" ident="TEI">
+<elementSpec 
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns="http://www.tei-c.org/ns/1.0" 
+    module="core" xml:id="TEI2" usage="req" ident="TEI">
 <equiv/>
 <gloss>TEI document</gloss>
 <desc>contains a single TEI-conformant document,
@@ -18,26 +21,28 @@ teiCorpus element.</desc>
       <rng:ref name="tei.teiText"/>
     </rng:group>
   </content>
+
   <attList>
     <attDef ident="xmlns" usage="req">
-	<equiv/>
-	<desc>The TEI default namespace</desc>
-      
-      
+      <equiv/>
+      <desc>The TEI default namespace</desc>
       <datatype><rng:text xmlns:rng="http://relaxng.org/ns/structure/1.0"/></datatype>
       <defaultVal>http://www.tei-c.org/ns/1.0</defaultVal>
       <valDesc>A valid XML namespace</valDesc>
-      
+    </attDef>
+    <attDef ident="xmlns" usage="req">
+	<equiv/>
+	<desc>The TEI default namespace</desc>
+	<datatype><rng:text xmlns:rng="http://relaxng.org/ns/structure/1.0"/></datatype>
+	<defaultVal>http://www.tei-c.org/ns/1.0</defaultVal>
+	<valDesc>A valid XML namespace</valDesc>
     </attDef>
     <attDef ident="version" usage="opt">
 	<equiv/>
 	<desc>The version of the TEI scheme</desc>
-      
-      
-      <datatype><rng:data xmlns:rng="http://relaxng.org/ns/structure/1.0" type="decimal"/></datatype>
-      <defaultVal>5.0</defaultVal>
+	<datatype><rng:data xmlns:rng="http://relaxng.org/ns/structure/1.0" type="decimal"/></datatype>
+	<defaultVal>5.0</defaultVal>
       <valDesc>A number identifying the version of the TEI guidelines</valDesc>
-      
     </attDef>
   </attList>
   
